+ Исправлена логика работы ключей в бд + Переименована сущность account в user + Проверены эндпоинты на работоспособность
