# internal/controllers/requests/create-admin-request.go
@@ -1,7 +1,0 @@
-package requests
-
-type CreateAdminRequest struct {
-	Fio         string `json:"fio"`
-	PhoneNumber string `json:"phone_number"`
-	AccountId   int    `json:"account_id"`
-}
