# internal/controllers/requests/create-student-request.go
@@ -1,9 +1,0 @@
-package requests
-
-type CreateStudentRequest struct {
-	Fio         string `json:"fio"`
-	GroupName   string `json:"group_name"`
-	PhoneNumber string `json:"phone_number"`
-	GroupId     int    `json:"group_id"`
-	AccountId   int    `json:"account_id"`
-}
