# internal/controllers/requests/create-teacher-request.go
@@ -1,7 +1,0 @@
-package requests
-
-type CreateTeacherRequest struct {
-	Fio         string `json:"fio"`
-	PhoneNumber string `json:"phone_number"`
-	AccountId   int    `json:"account_id"`
-}
