# internal/controllers/requests/update-admin-request.go
@@ -4,5 +4,4 @@ type UpdateAdminRequest struct {
 	Id          int    `json:"id"`
 	Fio         string `json:"fio"`
 	PhoneNumber string `json:"phone_number"`
-	AccountId   int    `json:"account_id"`
 }
