# internal/controllers/requests/update-student-request.go
@@ -3,8 +3,6 @@ package requests
 type UpdateStudentRequest struct {
 	Id          int    `json:"id"`
 	Fio         string `json:"fio"`
-	GroupName   string `json:"group_name"`
 	PhoneNumber string `json:"phone_number"`
 	GroupId     int    `json:"group_id"`
-	AccountId   int    `json:"account_id"`
 }
