# internal/controllers/requests/update-teacher-request.go
@@ -4,5 +4,4 @@ type UpdateTeacherRequest struct {
 	Id          int    `json:"id"`
 	Fio         string `json:"fio"`
 	PhoneNumber string `json:"phone_number"`
-	AccountId   int    `json:"account_id"`
 }
